src/objects/MUSW__License2__c.object
<CustomObject>
    <fields>
        <fullName>License_Phone__c</fullName>
        <label>License Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>License_Printable_Name__c</fullName>
        <label>License Printable Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licensee_Name__c</fullName>
        <formula>MUSW__Primary_Licensee__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Licensee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__AlertCode__c</fullName>
        <description>Numeric value that determines the alert indicator color. Updated by AlertParentUpdate trigger on the Task object.</description>
        <label>Alert Code</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Alert_Indicator__c</fullName>
        <description>Stoplight image displays green (0), yellow (1), or red (2), depending on the value of the alert code field.</description>
        <formula>HYPERLINK(&quot;/apex/musw__TaskAlert?id=&quot;+ Id, IMAGE(
CASE( MUSW__AlertCode__c,
0, &quot;/img/samples/light_green.gif&quot;,
1, &quot;/img/samples/light_yellow.gif&quot;,
2, &quot;/img/samples/light_red.gif&quot;,
&quot;https://letterbatch.mybasicgov.com/img/light_off.gif&quot;),
&quot;none&quot;), &quot;_top&quot;) + IF(MUSW__Parcel__c != null, &quot; Par: &quot; + HYPERLINK(&quot;/apex/musw__TaskAlert?id=&quot;+ MUSW__Parcel__c, IMAGE(
CASE( MUSW__Parcel__r.MUSW__AlertCode__c,
0, &quot;/img/samples/light_green.gif&quot;,
1, &quot;/img/samples/light_yellow.gif&quot;,
2, &quot;/img/samples/light_red.gif&quot;,
&quot;https://letterbatch.mybasicgov.com/img/light_off.gif&quot;),
&quot;none&quot;), &quot;_top&quot;),&quot;&quot;)</formula>
        <label>Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact applying for license.</description>
        <inlineHelpText>Person applying for License on behalf of Licensee</inlineHelpText>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>License2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Applicant_is_Licensee__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If this field is true, LicensePrimaryUpdates trigger sets the Primary Licensee Field (lookup) to the Id of the applicant&apos;s account.</description>
        <label>Applicant is Licensee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__BG_Responsible_Party_Type__c</fullName>
        <inlineHelpText>What type of party is responsible for all fee payments. Determines what cart the fees belong in. If not specified, default is Contact.</inlineHelpText>
        <label>Responsible Party Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Class__c</fullName>
        <description>Descriptor for License.</description>
        <inlineHelpText>classification or function/business/privilege permitted</inlineHelpText>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MUSW__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Liquor</fullName>
                </value>
                <value>
                    <fullName>Rental</fullName>
                </value>
                <value>
                    <fullName>Certification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Designation__c</fullName>
        <description>Deprecated</description>
        <inlineHelpText>distinguishing marker, special identifier, or specific permission</inlineHelpText>
        <label>Designation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Potentially Dangerous</fullName>
                </value>
                <value>
                    <fullName>Viscous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Disposition__c</fullName>
        <description>Used to further break down status codes to provide more control for the triggering of rules.</description>
        <inlineHelpText>System Use</inlineHelpText>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Pass 1</fullName>
                </value>
                <value>
                    <fullName>Pass 2</fullName>
                </value>
                <value>
                    <fullName>Finish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Expiration_Date__c</fullName>
        <description>Date when the license is effective to</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>9</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>MUSW__Issue_Date__c</fullName>
        <description>Date when license was issued</description>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Issued_Number__c</fullName>
        <description>Filled in when a permanent sequence number is issued. It prevents subsequent triggering of the sequence number code.</description>
        <label>Issued No.</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Latitude__c</fullName>
        <description>Deprecated upon introduction of Salesforce&apos;s geocode format.</description>
        <label>Latitude</label>
        <precision>17</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Longitude__c</fullName>
        <description>Deprecated upon introduction of salesforce&apos;s geocode format</description>
        <label>Longitude</label>
        <precision>17</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Parcel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the address record.</description>
        <label>Parcel</label>
        <referenceTo>MUSW__Parcel__c</referenceTo>
        <relationshipName>License2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Primary_Licensee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account lookup for licenses not held by individuals.</description>
        <label>Licensee</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>License2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When a Licensee can hold multiple concurrent licenses, this field indicates which is the primary license.</description>
        <inlineHelpText>This license is the main license for the Licensee or this License No. identifies the Licensee</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__Project2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Project object.</description>
        <label>Project</label>
        <referenceTo>MUSW__Project2__c</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>License2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Renewal_Date__c</fullName>
        <description>Date when the license was renewed</description>
        <inlineHelpText>Date License was renewed or extended</inlineHelpText>
        <label>Renewed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Status__c</fullName>
        <description>Current status of the license record</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Submission Failed</fullName>
                </value>
                <value>
                    <fullName>Generate Fee</fullName>
                </value>
                <value>
                    <fullName>Pending Payment</fullName>
                </value>
                <value>
                    <fullName>Waiting for Third Party Verification</fullName>
                </value>
                <value>
                    <fullName>Pending Action</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Pending Additional Qualifications</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Sunset</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Revoked</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>In-Review</fullName>
                </value>
                <value>
                    <fullName>Unlicensed Activity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Total_Balance__c</fullName>
        <description>Formula field that calculates the difference between the Total Fees and Total Payments.</description>
        <formula>MUSW__Total_Fees__c - MUSW__Total_Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Total_Fees__c</fullName>
        <description>Sum of the Amount field less the Waived Amount of all fees related to this record.</description>
        <label>Total Fees</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Total_Payments__c</fullName>
        <description>Sum of the Amount field of all Payments related to this record.</description>
        <label>Total Payments</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Type__c</fullName>
        <description>Primary descriptor of the License.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Liquor</fullName>
                </value>
                <value>
                    <fullName>Animal</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Makes_of_Homes_to_be_Sold__c</fullName>
        <description>To store Makes of Homes to be Sold</description>
        <label>Makes of Homes to be Sold</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufactured_Homes_Make__c</fullName>
        <description>Manufactured Homes Make</description>
        <label>Manufactured Homes Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufactured_Homes_Serial_Number__c</fullName>
        <description>Manufactured Homes Serial Number</description>
        <label>Manufactured Homes Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marked_for_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked then the record will be deleted using batch class</description>
        <label>Marked for Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Military_Spouse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Military Spouse/Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Military_Waiver__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Marks if applicant has requested a military waiver</inlineHelpText>
        <label>Military Waiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Military__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Military</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Model_Year__c</fullName>
        <description>community model year</description>
        <label>Manufactured Home Model Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Notification_Attempt__c</fullName>
        <description>Next Notification Attempt</description>
        <label>Next Notification Attempt</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Notification_Date__c</fullName>
        <description>Next Notification Date</description>
        <label>Next Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NoEmail__c</fullName>
        <formula>IF( ISBLANK( Account_Email__c ) , true, false)</formula>
        <label>NoEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Fee_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be set to true if fee has to be waived for a particular Credential</description>
        <label>No  Fee Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Fee__c</fullName>
        <formula>IF(ISPICKVAL(Credential__c, &quot;UDC Plumbing Inspector&quot;), FALSE, 
IF(ISPICKVAL(Credential__c, &quot;UDC Construction Inspector&quot;), FALSE, 
IF(ISPICKVAL(Credential__c, &quot;UDC HVAC Inspector&quot;), FALSE, 
IF(ISPICKVAL(Credential__c, &quot;UDC Electrical Inspector&quot;), FALSE, 
IF(ISPICKVAL(Credential__c, &quot;Soil Tester&quot;), FALSE, 
IF(ISPICKVAL(Credential__c, &quot;Delegated Agent - Commercial Building&quot;), TRUE,
IF(ISPICKVAL(Credential__c, &quot;Delegated Agent - Boiler&quot;), TRUE,
IF(ISPICKVAL(Credential__c, &quot;Delegated Agent - Elevator&quot;), TRUE,
IF(ISPICKVAL(Credential__c, &quot;Delegated Agent - Fire Suppression/Alarm Systems&quot;), TRUE,
IF(ISPICKVAL(Credential__c, &quot;Delegated Agent - Other&quot;), TRUE,
IF(ISPICKVAL(Credential__c, &quot;Delegated Agent - Plumbing&quot;), TRUE,
IF(ISPICKVAL(Credential__c, &quot;Delegated Agent - POWTS&quot;), TRUE,
Military_Waiver__c))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Active_Relationship__c</fullName>
        <label>No. of Active Relationship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Associations__c</fullName>
        <label>No. of Associations</label>
        <summaryForeignKey>Associations__c.Parent_License__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Lien_copies__c</fullName>
        <label>No of Lien copies</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_years_inactive__c</fullName>
        <formula>(TODAY()-MUSW__Expiration_Date__c) / 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No.of years inactive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_US_Citizen__c</fullName>
        <description>Filed to check whether the applicant is a US citizen or not</description>
        <label>Non US Citizen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notice_for_License_Renewal_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notice for License Renewal Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Alerts__c</fullName>
        <label>Number of Alerts</label>
        <summaryForeignKey>Alert__c.License__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Units__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Number of Units</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberoFDaysToExpired__c</fullName>
        <formula>if(MUSW__Issue_Date__c &lt; Dateofbirth_Expiry__c, Dateofbirth_Expiry__c-MUSW__Issue_Date__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NumberoFDaysToExpired</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Complaint_Flag__c</fullName>
        <formula>IF(Open_Complaints__c &gt; 0,IMAGE(&quot;/resource/LnP_Icons/LnP_Icons/OpenCaseFlag.png&quot;,&quot;&quot;)+&quot;Open Case&quot;,&quot;No open case&quot;  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Complaint Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Complaints__c</fullName>
        <label>Open Complaints</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Issue_Date__c</fullName>
        <description>First Date a License was issued for the license type</description>
        <label>First Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner_Address__c</fullName>
        <description>To store co-owner phone when a co-owner has been added to the application</description>
        <label>Owner Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Full_Name__c</fullName>
        <formula>Owner:User.FirstName &amp; &quot; &quot; &amp;  Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <description>To store co-owner name wherever applicable, ex-Manufactured Home Certificate of Title</description>
        <label>Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paper_Application__c</fullName>
        <description>This field is used to capture whether the incoming application was via the Portal (online) or via Mail (paper).
Important metric i.e. Paper vs Online Report is based on this picklist.</description>
        <label>Online or Paper Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                    <default>true</default>
                    <label>Online</label>
                </value>
                <value>
                    <fullName>Paper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Branch Licenses</relationshipLabel>
        <relationshipName>Branch_Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pending_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pending Audit - used for CE Audits</description>
        <inlineHelpText>Used for CE audits</inlineHelpText>
        <label>Pending Audit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Applicant/Licensee Phone</description>
        <formula>MUSW__Applicant__r.MobilePhone</formula>
        <inlineHelpText>Applicant/Licensee Phone</inlineHelpText>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pieces_of_Personal_Property__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Pieces of Personal Property</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Polaris_DHP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1656 : enhancement : now we are stamping the DHP status on license through this field and not on Substatus</description>
        <label>DHP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Polaris_Dishonored_Receipt_ID__c</fullName>
        <description>stamping the receipt id from DHP modal tracking the Dishonored Payment -&gt; US 2220 - letter</description>
        <label>Dishonored Receipt ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Amount__c</fullName>
        <description>This field is created to capture the policy amount from renewal process license.</description>
        <label>Policy Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Expiration_Date__c</fullName>
        <label>Policy Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <label>Policy Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreLicense_Number__c</fullName>
        <formula>if(NOT(ISPICKVAL(MUSW__Status__c, &quot;Active&quot;)),Name,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PreLicense Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Approval__c</fullName>
        <label>Pre-Approval</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AQB</fullName>
                </value>
                <value>
                    <fullName>IDECC</fullName>
                </value>
                <value>
                    <fullName>USPAP Instructor</fullName>
                </value>
                <value>
                    <fullName>College</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_License_Number__c</fullName>
        <label>Pre License Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Qualifying_Licensure_Levels__c</fullName>
        <label>Pre-Qualifying Licensure Levels</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Registered Trainee Appraiser</fullName>
                </value>
                <value>
                    <fullName>State Licensed Appraiser</fullName>
                </value>
                <value>
                    <fullName>Certified Residential Appraiser</fullName>
                </value>
                <value>
                    <fullName>Certified General Appraiser</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Print_First_Name__c</fullName>
        <label>Print First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Last_Name__c</fullName>
        <label>Print Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_License_DES__c</fullName>
        <label>Print License (DES)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Print_License_Email__c</fullName>
        <label>Print License (Email)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Print_Middle_Name__c</fullName>
        <label>Print Middle Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Renewal_Coupon__c</fullName>
        <label>Print Renewal Coupon</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prof_Code_Short_Desc__c</fullName>
        <description>Short Description of the Profession Name used for Print</description>
        <label>Prof Code Short Desc</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profession_Code__c</fullName>
        <description>Five digit code identifying the profession</description>
        <label>Profession Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Mailing_PO_Box__c</fullName>
        <formula>CASE( Application_Type__c , 
&quot;Notary Public&quot;, &quot;PO Box 9027&quot;,
&quot;Real Estate&quot;, &quot;PO Box 9021&quot;,
&quot;Appraisers - Real Estate&quot;, &quot;PO Box 9021&quot;,
&quot;Appraisal Management Companies&quot;, &quot;PO Box 9021&quot;,
&quot;Appraiser Course&quot;, &quot;PO Box 9021&quot;,
&quot;Timeshares&quot;, &quot;PO Box 9021&quot;,
&quot;Camping Resorts&quot;, &quot;PO Box 9021&quot;,
&quot;Geologist&quot;, &quot;PO Box 9012&quot;,
&quot;Architects&quot;, &quot;PO Box 9012&quot;,
&quot;Funerals&quot;, &quot;PO Box 9012&quot;,
&quot;Engineers&quot;, &quot;PO Box 9025&quot;,
&quot;Land Surveyors&quot;, &quot;PO Box 9025&quot;,
&quot;On-site Wastewater&quot;, &quot;PO Box 9025&quot;, 
&quot;Landscape Architects&quot;, &quot;PO Box 9012&quot;,
&quot;Cemeteries&quot;, &quot;PO Box 9012&quot;,
&quot;No Program PO Box Available&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Mailing PO Box</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Account_Name__c</fullName>
        <formula>Ultimate_Parent_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_School_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider/School Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Licenses (Provider/School Name)</relationshipLabel>
        <relationshipName>Course</relationshipName>
        <type>Lookup</type>
    </fields>
	<fields>
        <fullName>Print_Renewal_Letter__c</fullName>
        <label>Print Renewal Letter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <label>Provider Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Provider</fullName>
                </value>
                <value>
                    <fullName>Secondary Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Public_Address_Formula__c</fullName>
        <description>Complete Public address</description>
        <formula>IF( ISBLANK(Public_Address__c) , &apos;&apos;, HYPERLINK(&quot;/&quot; &amp;  Public_Address__r.Id ,  Public_Address__r.MUSW__Street2__c +IF(ISBLANK(Public_Address__r.MUSW__Unit__c),&quot;&quot;, &quot;  #&quot;+Public_Address__r.MUSW__Unit__c)+&quot;, &quot;+Public_Address__r.MUSW__City__c+&quot;, &quot;+TEXT(Public_Address__r.MUSW__State__c)+&quot;, &quot;+TEXT(Public_Address__r.County__c)+&quot; &quot;+Public_Address__r.MUSW__Post_Zip_Code__c+&quot; &quot;+TEXT(Public_Address__r.Country__c)))</formula>
        <label>Public Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Public Address - lookup on Parcel</description>
        <label>Public Address</label>
        <referenceTo>MUSW__Parcel__c</referenceTo>
        <relationshipLabel>Licenses (Public Address)</relationshipLabel>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Public_Lookup_Credential__c</fullName>
        <description>Picklist to show all the Credentials based on Application type</description>
        <label>Public Lookup Credential</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Credential</valueSetName>
        </valueSet>
    </fields>
</CustomObject>